# change-detection

./: .buildinfo  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  Untitled0.ipynb  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: environment.pickle  index.doctree
.doctrees/source/: modules.doctree  src.cpd.doctree  src.datasets.doctree  src.doctree
.github/workflows/: check.yml  docs.yml  lint.yml  tests.yml
_sources/source/: src.cpd.rst.txt  src.datasets.rst.txt  src.rst.txt
core/: pyproject.toml
core/src/: cpd_algorithm.py  kliep.py  rulsif.py
datasets/: pyproject.toml
datasets/src/: synthetic.py  zboxfs.py
docs/: Makefile  conf.py  index.rst
source/: modules.html  src.cpd.html  src.datasets.html  src.html
src/: cpd_algorithm.py  data_generation.py  kliep.py  rulsif.py
src/cpd/: kliep.py  rulsif.py
src/datasets/: config.py  download.py  synthetic.py
tests/: test_download.py
