[tool.poetry]
name = "change-detection"
version = "0.1.0"
description = ""
authors = ["ArtemKhel <ArtemKhel@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "^2.1.2"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
ruff = "^0.1.5"
#black = "^23.11.0"
#flake8 = "^6.1.0"
#flake8-pyproject = "^1.2.3"
mypy = "^1.6.1"
pre-commit = "^3.5.0"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
matplotlib = "^3.8.0"
jupyter = "^1.0.0"
seaborn = "^0.13.0"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4
respect-gitignore = true

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["A", "E", "F", "I", "NPY", "PL", "RUF", "SIM", "UP", "W", ]
ignore = [
    "PLR0913",
    "NPY002"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]

[tool.mypy]
python_version = "3.11"
exclude = [".venv", "_[^_]*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
