[tool.poetry]
name = "change-detection"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
authors = ["ArtemKhel <ArtemKhel@gmail.com>"]
repository = "https://www.github.com/ArtemKhel/change-detection"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "2.1.2"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[tool.poetry.group.docs.dependencies]
sphinx = "^7.2.6"
pydata-sphinx-theme = "^0.14.4"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
ruff = "^0.1.5"
pre-commit = "^3.5.0"
mypy = "^1.6.1"

[tool.poetry.group.notebook]
optional = true

[tool.poetry.group.notebook.dependencies]
matplotlib = "^3.8.0"
jupyter = "*"
seaborn = "^0.13.0"

[tool.ruff]
target-version = "py311"
line-length = 120
indent-width = 4
respect-gitignore = true
exclude = ["docs/", ]

[tool.ruff.lint]
# https://docs.astral.sh/ruff/rules/
select = ["A", "E", "F", "I", "NPY", "PL", "RUF", "SIM", "UP", "W", ]
ignore = [
    "PLR0913",
    "NPY002"
]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.isort]
combine-as-imports = true
extra-standard-library = ["typing_extensions"]

[tool.mypy]
python_version = "3.11"
exclude = [".venv", "_[^_]*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
