[tool.poetry]
name = "change-detection-core"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
authors = ["ArtemKhel <ArtemKhel@gmail.com>"]
repository = "https://www.github.com/ArtemKhel/change-detection"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
numpy = "^1.26.1"
pandas = "2.1.2"
scipy = "^1.11.3"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
#ruff = "^0.1.5"
#mypy = "^1.6.1"
#pre-commit = "^3.5.0"

#[tool.mypy]
#python_version = "3.11"
#exclude = [".venv", "_[^_]*"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
