[tool.poetry]
name = "change-detection-datasets"
version = "0.1.0"
description = ""
readme = "README.md"
license = "MIT"
authors = ["ArtemKhel <ArtemKhel@gmail.com>"]
repository = "https://www.github.com/ArtemKhel/change-detection"

[tool.poetry.dependencies]
python = "^3.11"
numpy = "^1.26.1"
pandas = "2.1.2"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
